Cleaned up SaveCommand for review, LoadCommand still not working as intended